--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="black">#2d302d</color>
+    <color name="yellow">#fcc128</color>
+    <color name="red">#E73729</color>
+    <color name="white">#ffffff</color>
 </resources>
