--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,39 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <!-- Text -->
+    <style name="titleText">
+        <item name="android:fontFamily">@font/concert_one</item>
+        <item name="android:textSize">35sp</item>
+    </style>
+
+    <style name="titleTextBlack">
+        <item name="android:fontFamily">@font/concert_one</item>
+        <item name="android:textSize">35sp</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="titleTextYellow">
+        <item name="android:fontFamily">@font/concert_one</item>
+        <item name="android:textSize">35sp</item>
+        <item name="android:textColor">@color/yellow</item>
+    </style>
+
+    <style name="normalText">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">17sp</item>
+    </style>
+
+    <style name="sloganText">
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+    <!-- Button -->
+    <style name="roundbutton">
+        <item name="android:fontFamily">@font/maven_pro</item>
+        <item name="android:textSize">17sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:background">@drawable/round</item>
+    </style>
+
 </resources>
