--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -19,7 +19,7 @@
             android:layout_marginBottom="10dp"/>
 
         <TextView
-            style="@style/sloganText"
+            android:font ="@font/nanum_pen_script_regular"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="welcome to the lunch run!" />
