--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,17 +6,58 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_centerInParent="true"
-        android:gravity="center"
-        android:orientation="vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
-        <ImageView
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:src="@drawable/title_logo"/>
-    </LinearLayout>
+        <LinearLayout
+            android:id="@+id/top"
+            android:layout_centerHorizontal="true"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:src="@drawable/title_logo"/>
+
+            <TextView
+                style="@style/normalText"
+                android:layout_marginTop="7dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/slogan"/>
+        </LinearLayout>
+
+
+        <Button
+            android:id="@+id/btn_signin"
+            android:layout_below="@+id/top"
+            style="@style/roundbutton"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:layout_marginLeft="40dp"
+            android:layout_marginRight="40dp"
+            android:layout_marginTop="50dp"
+            android:backgroundTint="@color/black"
+            android:text="SIGN UP"
+            android:textColor="@color/white"/>
+
+        <Button
+            android:id="@+id/btn_signup"
+            android:layout_below="@+id/btn_signin"
+            style="@style/roundbutton"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:layout_marginLeft="40dp"
+            android:layout_marginRight="40dp"
+            android:layout_marginTop="25dp"
+            android:backgroundTint="@color/yellow"
+            android:text="SIGN UP"
+            android:textColor="@color/white"/>
+    </RelativeLayout>
 
 </RelativeLayout>
