--- a/app/src/main/res/layout/fragment_map_menu.xml
+++ b/app/src/main/res/layout/fragment_map_menu.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
     <TextView
@@ -7,4 +7,4 @@
         android:layout_height="match_parent"
         android:gravity="center"
         android:text="map"/>
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
