레이아웃 수정 및 에러 해결

--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -1,72 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="@color/white"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
     <LinearLayout
-        android:id="@+id/top"
-        android:layout_above="@+id/form"
-        android:layout_marginLeft="30dp"
         android:orientation="vertical"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center">
-
-        <ImageView
-            android:layout_width="160dp"
-            android:layout_height="150dp"
-            android:src="@drawable/title_logo"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/slogan" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/form"
-        android:gravity="center_vertical"
         android:layout_centerInParent="true"
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginBottom="50dp">
+        android:layout_height="wrap_content">
 
-        <TextView
-            style="@style/normalText"
+        <LinearLayout
+            android:id="@+id/top"
+            android:layout_marginLeft="30dp"
+            android:orientation="vertical"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="E - Mail"/>
+            android:gravity="center">
 
-        <EditText
-            android:id="@+id/et_email"
+            <ImageView
+                android:layout_width="160dp"
+                android:layout_height="150dp"
+                android:src="@drawable/title_logo"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/slogan" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/form"
+            android:gravity="center_vertical"
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-        <TextView
-            style="@style/normalText"
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="35dp"
-            android:text="비밀번호"/>
+            android:layout_marginLeft="50dp"
+            android:layout_marginRight="50dp"
+            android:layout_marginTop="50dp"
+            android:layout_marginBottom="60dp">
 
-        <EditText
-            android:id="@+id/et_pwd"
+            <TextView
+                style="@style/normalText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="E - Mail"/>
+
+            <EditText
+                android:id="@+id/et_email"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                style="@style/normalText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="35dp"
+                android:text="비밀번호"/>
+
+            <EditText
+                android:id="@+id/et_pwd"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/btn_signin"
+            style="@style/roundbutton"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="70dp"
+            android:layout_marginLeft="40dp"
+            android:layout_marginRight="40dp"
+            android:backgroundTint="@color/black"
+            android:text="SIGN UP"
+            android:textColor="@color/white"/>
     </LinearLayout>
 
-    <Button
-        android:id="@+id/btn_signup"
-        android:layout_below="@+id/form"
-        style="@style/roundbutton"
-        android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"
-        android:backgroundTint="@color/black"
-        android:text="SIGN UP"
-        android:textColor="@color/white"/>
 </RelativeLayout>
