--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/white"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -25,6 +26,7 @@
                 android:src="@drawable/title_logo"/>
 
             <TextView
+                android:font="@font/jua"
                 style="@style/normalText"
                 android:layout_marginTop="7dp"
                 android:layout_width="wrap_content"
@@ -43,7 +45,7 @@
             android:layout_marginRight="40dp"
             android:layout_marginTop="50dp"
             android:backgroundTint="@color/black"
-            android:text="SIGN UP"
+            android:text="SIGN IN"
             android:textColor="@color/white"/>
 
         <Button
