--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="@color/white"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
 
@@ -10,8 +11,9 @@
         android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp">
-        
+        android:layout_marginTop="70dp">
+
+        <!--
         <ImageView
             android:layout_width="120dp"
             android:layout_height="120dp"
@@ -22,7 +24,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="welcome to the lunch run!" />
+        -->
 
+        <TextView
+            android:fontFamily="@font/concert_one"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="lunch run"
+            android:textColor="@color/black"
+            android:textSize="60dp"/>
     </LinearLayout>    
 
     <LinearLayout
@@ -92,7 +102,7 @@
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="60dp"
+        android:layout_marginBottom="70dp"
         android:layout_marginLeft="40dp"
         android:layout_marginRight="40dp"
         android:backgroundTint="@color/yellow"
