--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#fcc128</color>
+    <color name="colorPrimaryDark">#ffffff</color>
+    <color name="colorAccent">#fcc128</color>
     <color name="black">#2d302d</color>
     <color name="yellow">#fcc128</color>
     <color name="red">#E73729</color>
