--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -1,78 +1,115 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:background="@color/white"
+    android:background="@color/black"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
     <LinearLayout
         android:orientation="vertical"
+        android:layout_marginHorizontal="20dp"
         android:layout_centerInParent="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <LinearLayout
             android:id="@+id/top"
-            android:layout_marginLeft="30dp"
-            android:orientation="vertical"
+            android:layout_gravity="center"
+            android:orientation="horizontal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center">
 
-            <ImageView
-                android:layout_width="160dp"
-                android:layout_height="150dp"
-                android:src="@drawable/title_logo"/>
-
             <TextView
+                style="@style/titleText"
+                android:textColor="@color/white"
+                android:textSize="60dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/slogan" />
+                android:text="lunch "/>
+
+            <TextView
+                style="@style/titleText"
+                android:textColor="@color/yellow"
+                android:textSize="60dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="r"/>
+
+            <TextView
+                style="@style/titleText"
+                android:textColor="@color/white"
+                android:textSize="60dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="un"/>
+            <!--
+            <ImageView
+                android:layout_width="200dp"
+                android:layout_height="210dp"
+                android:src="@drawable/title_logo"/>
+            -->
         </LinearLayout>
 
+
         <LinearLayout
-            android:id="@+id/form"
-            android:gravity="center_vertical"
+            android:background="@drawable/round"
+            android:backgroundTint="@color/white"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="50dp"
-            android:layout_marginRight="50dp"
+            android:layout_marginHorizontal="20dp"
             android:layout_marginTop="50dp"
-            android:layout_marginBottom="60dp">
+            android:layout_marginBottom="20dp">
 
-            <TextView
-                style="@style/normalText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="E - Mail"/>
-
-            <EditText
-                android:id="@+id/et_email"
+            <LinearLayout
+                android:id="@+id/form"
+                android:gravity="center_vertical"
+                android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-            <TextView
-                style="@style/normalText"
-                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="35dp"
-                android:text="비밀번호"/>
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginVertical="20dp">
 
-            <EditText
-                android:id="@+id/et_pwd"
+                <TextView
+                    style="@style/normalText"
+                    android:layout_marginLeft="5dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="E - Mail"/>
+
+                <EditText
+                    android:id="@+id/et_email"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="E - Mail"/>
+
+                <TextView
+                    style="@style/normalText"
+                    android:layout_marginLeft="5dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="30dp"
+                    android:text="비밀번호"/>
+
+                <EditText
+                    android:id="@+id/et_pwd"
+                    android:hint="비밀번호"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
+
+            <Button
+                android:id="@+id/btn_signin"
+                style="@style/roundbutton"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="70dp"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginBottom="20dp"
+                android:backgroundTint="@color/yellow"
+                android:text="SIGN UP"
+                android:textColor="@color/white"/>
         </LinearLayout>
 
-        <Button
-            android:id="@+id/btn_signin"
-            style="@style/roundbutton"
-            android:layout_width="match_parent"
-            android:layout_height="70dp"
-            android:layout_marginLeft="40dp"
-            android:layout_marginRight="40dp"
-            android:backgroundTint="@color/black"
-            android:text="SIGN UP"
-            android:textColor="@color/white"/>
     </LinearLayout>
 
 </RelativeLayout>
