--- a/app/src/main/res/layout/fragment_map_menu.xml
+++ b/app/src/main/res/layout/fragment_map_menu.xml
@@ -3,9 +3,10 @@
     android:background="@color/white"
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <TextView
+
+    <RelativeLayout
+        android:id="@+id/map_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="map"/>
+        android:layout_height="match_parent" />
+
 </RelativeLayout>
