text -> img 로 변경 (폰트 적용안되는 것 나중에 해결하기)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,13 +25,10 @@
                 android:layout_height="250dp"
                 android:src="@drawable/title_logo"/>
 
-            <TextView
-                android:font="@font/jua"
-                style="@style/normalText"
-                android:layout_marginTop="7dp"
+            <ImageView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/slogan"/>
+                android:layout_height="50dp"
+                android:src="@drawable/sub"/>
         </LinearLayout>
 
 
