--- a/app/src/main/res/layout/activity_new_main.xml
+++ b/app/src/main/res/layout/activity_new_main.xml
@@ -21,6 +21,10 @@
                 android:layout_width="250dp"
                 android:layout_height="250dp"
                 android:src="@drawable/title_logo"/>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                android:src="@drawable/sub"/>
         </LinearLayout>
 
         <LinearLayout
@@ -30,7 +34,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="40dp"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp">
 
             <TextView
