--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -26,13 +26,10 @@
             android:text="welcome to the lunch run!" />
         -->
 
-        <TextView
-            android:fontFamily="@font/concert_one"
+        <ImageView
+            android:src="@drawable/signup_title"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Welcome!"
-            android:textColor="@color/black"
-            android:textSize="50dp"/>
+            android:layout_height="80dp" />
     </LinearLayout>    
 
     <LinearLayout
@@ -45,7 +42,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="50dp"
         android:layout_marginRight="50dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="0dp"
         android:layout_marginBottom="10dp">
 
         <TextView
