--- a/app/src/main/res/layout/fragment_roulette_menu.xml
+++ b/app/src/main/res/layout/fragment_roulette_menu.xml
@@ -10,4 +10,11 @@
         android:layout_height="match_parent"
         android:gravity="center"
         android:text="roulette"/>
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="20dp"
+        android:layout_centerInParent="true"
+        android:src="@drawable/roulette"/>
 </RelativeLayout>
