--- a/app/src/main/res/layout/activity_new_main.xml
+++ b/app/src/main/res/layout/activity_new_main.xml
@@ -64,7 +64,10 @@
                 android:id="@+id/et_pwd"
                 android:hint="비밀번호를 입력하세요"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:singleLine="true"
+                android:maxLength="100"
+                android:inputType="textPassword"/>
         </LinearLayout>
 
         <Button
