--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -78,7 +78,10 @@
         <EditText
             android:id="@+id/et_pwd"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:singleLine="true"
+            android:maxLength="100"
+            android:inputType="textPassword" />
 
         <TextView
             style="@style/normalText"
@@ -90,7 +93,10 @@
         <EditText
             android:id="@+id/et_phone"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:inputType="phone"
+            android:maxLength="11"
+            android:digits="0123456789+"/>
     </LinearLayout>
 
     <Button
