--- a/app/src/main/res/layout/fragment_map_menu.xml
+++ b/app/src/main/res/layout/fragment_map_menu.xml
@@ -9,4 +9,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <ListView
+        android:id="@+id/restaurant_list_view"
+        android:layout_margin="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </ListView>
 </RelativeLayout>
