--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimaryDark">#ffffff</color>
     <color name="colorAccent">#fcc128</color>
     <color name="black">#2d302d</color>
+    <color name="gray">#dddddd</color>
     <color name="yellow">#fcc128</color>
     <color name="red">#E73729</color>
     <color name="white">#ffffff</color>
