--- a/app/src/main/res/layout/fragment_review_menu.xml
+++ b/app/src/main/res/layout/fragment_review_menu.xml
@@ -3,9 +3,17 @@
     android:background="@color/white"
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <TextView
+
+    <ListView
+        android:id="@+id/restaurant_list_view"
+        android:layout_margin="10dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="review"/>
+        android:layout_height="match_parent">
+    </ListView>
+
+    <ProgressBar
+        android:id="@+id/progressbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"/>
 </RelativeLayout>
