--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="yellow">#fcc128</color>
     <color name="red">#E73729</color>
     <color name="white">#ffffff</color>
+    <color name="gray">#EBEBEB</color>
+
 </resources>
